# comick-merger

./: .gitignore  BUILD.md  CLAUDE.md  DEVELOPMENT.md  GUI_GUIDE.md  README.md  comick_merger.spec  main.py  pyproject.toml  run_gui.bat  run_gui.sh
comick_merger/: __init__.py  cbz_merger.py  cli.py  gui.py  main.py
tests/: README.md  __init__.py  conftest.py  setup_test_data.py  test_cbz_merger.py
